refactoring animations
Co-authored-by: Manuel Rocca <manuel.rocca@ulb.be>